--- a/public/sass/@media_customer_details.scss
+++ b/public/sass/@media_customer_details.scss
@@ -241,6 +241,49 @@
             }
         }
     }
+    .invoice-wrapper {
+        .invoice-container {
+            .invoice-content {
+                .invoice {
+                    .invoice-client-logo {
+                        .logo-wrap {
+                            div:nth-child(2) {
+                                font-size: $font-s;
+                                top: 5px;
+                            }
+                        }
+                    }
+                    .invoice-structure-wrap {
+                        .invoice-structure-container {
+                            .invoice-table-wrap {
+                                .invoice-table-header {
+                                    display: grid;
+                                    grid-template-columns: 3fr 1fr 1fr 1fr;
+                                    grid-gap: .1rem;
+                                }
+                                .invoice-item-wrap{
+                                    .invoice-item-cell {
+                                        display: grid;
+                                        grid-template-columns: 3fr 1fr 1fr 1fr;
+                                        grid-gap: .1rem;
+
+                                        div {
+                                            font-size: $font-s;
+                                        
+                                            span {
+                                                text-align: center;
+                                                width: 100%;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 @media screen and (max-width: 640px) {
     .form-banner-container {
@@ -428,6 +471,67 @@
             }
         }
     }
+    // INVOICE START
+    .invoice-wrapper {
+        .invoice-container {
+            .invoice-content {
+                .invoice {
+                    .invoice-client-logo {
+                        display: none;
+                    }
+                    .invoice-structure-wrap {
+                        .invoice-structure-container {
+                            .invoice-header-wrap {
+                                div:nth-child(1) {
+                                    font-size: 2.5rem;
+                                }
+                                div:nth-child(2), div:nth-child(3), div:nth-child(4) {
+                                    font-size: $font-l;
+                                }
+                            }
+                            .client-wrapper-media {
+                                display: block;
+                            }
+                            .invoice-table-wrap {
+                                .invoice-table-header {
+                                    display: grid;
+                                    grid-template-columns: 3fr 1fr 1fr 1fr;
+                                    grid-gap: .1rem;
+                                }
+                                .invoice-item-wrap{
+                                    .invoice-item-cell {
+                                        display: grid;
+                                        grid-template-columns: 3fr 1fr 1fr 1fr;
+                                        grid-gap: .1rem;
+
+                                        div {
+                                            font-size: $font-s;
+                                        
+                                            span {
+                                                text-align: center;
+                                                width: 100%;
+                                            }
+                                        }
+                                    }
+                                }
+                                .invoice-summation-wrap {
+                                    flex-direction: column-reverse;
+
+                                    .summation-container {
+                                        div {
+                                            font-size: 12px;
+                                            margin: 5px;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    // INVOICE END
 }
 @media screen and (max-width: 414px) {
     .form-banner-container {
@@ -500,6 +604,67 @@
             }
         }
     }
+    // INVOICE START
+    .invoice-wrapper {
+        .invoice-container {
+            .invoice-content {
+                .invoice {
+                    .invoice-client-logo {
+                        display: none;
+                    }
+                    .invoice-structure-wrap {
+                        .invoice-structure-container {
+                            .invoice-header-wrap {
+                                div:nth-child(1) {
+                                    font-size: 2.5rem;
+                                }
+                                div:nth-child(2), div:nth-child(3), div:nth-child(4) {
+                                    font-size: $font-l;
+                                }
+                            }
+                            .client-wrapper-media {
+                                display: block;
+                            }
+                            .invoice-table-wrap {
+                                .invoice-table-header {
+                                    display: grid;
+                                    grid-template-columns: 3fr 1fr 1fr 1fr;
+                                    grid-gap: .1rem;
+                                }
+                                .invoice-item-wrap{
+                                    .invoice-item-cell {
+                                        display: grid;
+                                        grid-template-columns: 3fr 1fr 1fr 1fr;
+                                        grid-gap: .1rem;
+
+                                        div {
+                                            font-size: $font-s;
+                                        
+                                            span {
+                                                text-align: center;
+                                                width: 100%;
+                                            }
+                                        }
+                                    }
+                                }
+                                .invoice-summation-wrap {
+                                    flex-direction: column-reverse;
+
+                                    .summation-container {
+                                        div {
+                                            font-size: 12px;
+                                            margin: 5px;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    // INVOICE END
 }
 @media screen and (max-width: 412px) {
     .form-banner-container {
@@ -645,6 +810,65 @@
             }
         }
     }
+    .invoice-wrapper {
+        .invoice-container {
+            .invoice-content {
+                .invoice {
+                    .invoice-client-logo {
+                        display: none;
+                    }
+                    .invoice-structure-wrap {
+                        .invoice-structure-container {
+                            .invoice-header-wrap {
+                                div:nth-child(1) {
+                                    font-size: 2.5rem;
+                                }
+                                div:nth-child(2), div:nth-child(3), div:nth-child(4) {
+                                    font-size: $font-l;
+                                }
+                            }
+                            .client-wrapper-media {
+                                display: block;
+                            }
+                            .invoice-table-wrap {
+                                .invoice-table-header {
+                                    display: grid;
+                                    grid-template-columns: 3fr 1fr 1fr 1fr;
+                                    grid-gap: .1rem;
+                                }
+                                .invoice-item-wrap{
+                                    .invoice-item-cell {
+                                        display: grid;
+                                        grid-template-columns: 3fr 1fr 1fr 1fr;
+                                        grid-gap: .1rem;
+
+                                        div {
+                                            font-size: $font-s;
+                                        
+                                            span {
+                                                text-align: center;
+                                                width: 100%;
+                                            }
+                                        }
+                                    }
+                                }
+                                .invoice-summation-wrap {
+                                    flex-direction: column-reverse;
+
+                                    .summation-container {
+                                        div {
+                                            font-size: 12px;
+                                            margin: 5px;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 @media screen and (max-width: 360px) {
     // FORM SECTION START
@@ -719,5 +943,67 @@
         }
     }
     // FORM SECTION END
+
+    // INVOICE START
+    .invoice-wrapper {
+        .invoice-container {
+            .invoice-content {
+                .invoice {
+                    .invoice-client-logo {
+                        display: none;
+                    }
+                    .invoice-structure-wrap {
+                        .invoice-structure-container {
+                            .invoice-header-wrap {
+                                div:nth-child(1) {
+                                    font-size: 2.5rem;
+                                }
+                                div:nth-child(2), div:nth-child(3), div:nth-child(4) {
+                                    font-size: $font-l;
+                                }
+                            }
+                            .client-wrapper-media {
+                                display: block;
+                            }
+                            .invoice-table-wrap {
+                                .invoice-table-header {
+                                    display: grid;
+                                    grid-template-columns: 3fr 1fr 1fr 1fr;
+                                    grid-gap: .1rem;
+                                }
+                                .invoice-item-wrap{
+                                    .invoice-item-cell {
+                                        display: grid;
+                                        grid-template-columns: 3fr 1fr 1fr 1fr;
+                                        grid-gap: .1rem;
+
+                                        div {
+                                            font-size: $font-s;
+                                        
+                                            span {
+                                                text-align: center;
+                                                width: 100%;
+                                            }
+                                        }
+                                    }
+                                }
+                                .invoice-summation-wrap {
+                                    flex-direction: column-reverse;
+
+                                    .summation-container {
+                                        div {
+                                            font-size: 12px;
+                                            margin: 5px;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    // INVOICE END
 }
 // PORTRAIT ORIENTATION END
