--- a/public/css/invoice.css
+++ b/public/css/invoice.css
@@ -117,6 +117,43 @@ a {
   font-size: 18px;
 }
 
+.invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .client-wrapper-media {
+  position: relative;
+  width: 100%;
+  background: #ececec;
+  display: none;
+}
+
+.invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .client-wrapper-media div {
+  position: relative;
+}
+
+.invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .client-wrapper-media .header {
+  position: relative;
+  font-size: 20px;
+  margin-bottom: 10px;
+  margin-top: 5px;
+  color: black;
+  font-weight: 500;
+}
+
+.invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .client-wrapper-media .client-container-media {
+  width: 100%;
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  grid-gap: .1rem;
+}
+
+.invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .client-wrapper-media .client-container-media li {
+  font-size: 11px;
+  margin: 2px;
+  color: black;
+  font-style: italic;
+}
+
 .invoice-wrapper .invoice-container .invoice-content .invoice .invoice-structure-wrap .invoice-structure-container .invoice-payment-wrap {
   position: relative;
   margin-top: 20px;
