--- a/public/sass/invoice.scss
+++ b/public/sass/invoice.scss
@@ -77,6 +77,38 @@
                                 font-size: 18px;
                             }
                         }
+                        .client-wrapper-media {
+                            position: relative;
+                            width: 100%;
+                            background: rgb(236, 236, 236);
+                            display: none;
+
+                            div {
+                                position: relative;
+                            }
+                            .header {
+                                position: relative;
+                                font-size: 20px;
+                                margin-bottom: 10px;
+                                margin-top: 5px;
+                                color: black;
+                                font-weight: 500;
+                            }
+                            .client-container-media {
+                                width: 100%;
+                                height: 100%;
+                                display: grid;
+                                grid-template-columns: repeat(2, 1fr);
+                                grid-gap: .1rem;
+
+                                li {
+                                    font-size: $font-vs;
+                                    margin: 2px;
+                                    color: black;
+                                    font-style: italic;
+                                }
+                            }
+                        }
                         .invoice-payment-wrap {
                             position: relative;
                             margin-top: 20px;
